--- a/RakenTests/pom.xml
+++ b/RakenTests/pom.xml
@@ -29,6 +29,12 @@
             <version>1.6.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.38</version>
+        </dependency>
+
     </dependencies>
 
 </project>
